GNOME Bugzilla – Bug 696114
g-s-d media keys uses G_DBUS_FLAGS_DO_NOT_AUTOSTART with well-known name
Last modified: 2013-03-19 14:48:09 UTC
This causes a critical warning at every method call. I don't think this code could have ever worked, at least on login. Could be a regression from: commit b0cee1df30b4945f524611f354ff164d4a383262 Author: Florian Müllner <fmuellner@gnome.org> Date: Thu Nov 15 17:41:24 2012 +0100
So...gnome-shell doesn't provide a dbus service file. It probably should - I can't think of another way out of this.
g-s-d *could* use g_bus_watch_name().
Created attachment 239216 [details] [review] 0001-media-keys-Watch-for-shell-to-appear-before-creating.patch
Aaand back to g-s-d.
Review of attachment 239216 [details] [review]: Please commit to gnome-3-8 and master ::: plugins/media-keys/gsd-media-keys-manager.c @@ +168,2 @@ /* Shell stuff */ + guint name_owner_id; line up the letters. @@ +2310,1 @@ + manager->priv->name_owner_id = single line
master: https://git.gnome.org/browse/gnome-settings-daemon/commit/?id=922478ebb361d47eb9309cfdd15b01c6eaad2749 Will send a HCF break request.
There's no hard code freeze, we haven't released 3.7.92.
Pushed to gnome-3-8 too.