media-keys: Watch for shell to appear before creating DBus proxies

Otherwise we fail to send method calls.

https://bugzilla.gnome.org/show_bug.cgi?id=696114